# OS_Labs_Matskevich

Lab_1/cpp17/: CMakeLists.txt
Lab_1/cpp17/Creator/: Creator.cpp
Lab_1/cpp17/Main/: Main.cpp
Lab_1/cpp17/tests/: test_main.cpp  test_reporter.cpp
Lab_1/cpp98/: CMakeLists.txt
Lab_1/cpp98/Main/: Main.cpp
Lab_1/cpp98/Reporter/: Reporter.cpp
Lab_2/cpp17/: tests.cpp
Lab_2/cpp98/: CMakeLists.txt
Lab_3/cpp17/: CMakeLists.txt
Lab_3/cpp98/: main.cpp
Lab_4/: sender.cpp
_temp_labs/Lab_1/cpp17/Reporter/: Reporter.cpp
_temp_labs/Lab_1/cpp17/tests/: test_creator.cpp
_temp_labs/Lab_1/cpp98/Creator/: Creator.cpp
_temp_labs/Lab_2/cpp17/: CMakeLists.txt  main.cpp
_temp_labs/Lab_2/cpp98/: main.cpp
_temp_labs/Lab_3/cpp17/: main.cpp
_temp_labs/Lab_3/cpp98/: CMakeLists.txt
_temp_labs/Lab_4/: CMakeLists.txt  receiver.cpp
_temp_labs/Lab_5/: CmakeLists.txt
_temp_labs/Lab_5/src/: common.h  server.cpp  tests.cpp
